--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ layout: default
 
 {% include education.html %}
 
+{% include experience.html %}
+
 {% include projects.html %}
 
 {% include honors.html %}
